include_directories(${MSGPUCK_INCLUDE_DIRS})
build_module(function1 function1.c)
target_link_libraries(function1 msgpuck)
build_module(reload1 reload1.c)
target_link_libraries(reload1 msgpuck)
build_module(reload2 reload2.c)
target_link_libraries(reload2 msgpuck)
build_module(func_restore1 func_restore1.c)
build_module(func_restore2 func_restore2.c)
build_module(func_restore3 func_restore3.c)
build_module(func_restore4 func_restore4.c)
build_module(tuple_bench tuple_bench.c)
build_module(cfunc1 cfunc1.c)
target_link_libraries(cfunc1 msgpuck)
build_module(cfunc2 cfunc2.c)
target_link_libraries(cfunc2 msgpuck)
build_module(cfunc3 cfunc3.c)
target_link_libraries(cfunc3 msgpuck)
build_module(cfunc4 cfunc4.c)
target_link_libraries(cfunc4 msgpuck)
